added conditional regularisation

--- a/hsmm_ablation.ipynb
+++ b/hsmm_ablation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,38 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "| Model | Z Dim | MSE |\n",
-      "|:-----:|:-----:|:----:|\n",
-      "| vae | 3 | 8.3241e-01 ± 1.2584e+00 |\n",
-      "| mild | 3 | 8.6145e-01 ± 1.4296e+00 |\n",
-      "| vae | 5 | 7.0881e-01 ± 9.9514e-01 |\n",
-      "| mild | 5 | 7.6722e-01 ± 1.0670e+00 |\n",
-      "| vae | 8 | 6.9520e-01 ± 9.6960e-01 |\n",
-      "| mild | 8 | 6.7423e-01 ± 9.6643e-01 |\n",
-      "| vae | 10 | 6.8444e-01 ± 9.4364e-01 |\n",
-      "| mild | 10 | 6.6250e-01 ± 9.6536e-01 |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"| Model | Z Dim | MSE |\")\n",
     "print(\"|:-----:|:-----:|:----:|\")\n",
-    "for z_dim in [3,5,8,10]:\n",
-    "\tfor model_types in ['vae','mild']:\n",
+    "for z_dim in [3,5]:#,8,10]:\n",
+    "\tfor model_types in ['ablation_vae','ablation_mild', 'cross_kld_mild', 'cross_kld_recon']:\n",
     "# if True:\n",
     "# \tif True:\t\n",
     "\t\t# ckpt = 'logs/2023/cross_kld_correct/models/final.pth'\n",
     "\t\tmse_error = []\n",
-    "\t\tfor trial in range(5):\n",
-    "\t\t\tckpt = f'logs/2023/ablation_{model_types}/z{z_dim}/trial{trial}/models/final.pth' # input()\n",
-    "\n",
+    "\t\tfor trial in [0,1,2,4]:\n",
+    "\t\t\tckpt = f'logs/2023/{model_types}/z{z_dim}/trial{trial}/models/0040.pth' # input()\n",
     "\t\t\tdirname = os.path.dirname(ckpt)\n",
     "\t\t\thyperparams = np.load(os.path.join(dirname,'hyperparams.npz'), allow_pickle=True)\n",
     "\t\t\targs = hyperparams['args'].item()\n",
