--- a/test_hh.ipynb
+++ b/test_hh.ipynb
@@ -132,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc049c76afa64f2286ccf54be65de5c6",
+       "model_id": "2a9b92ea054f404095a878673e1d9d10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,15 +161,15 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task exception was never retrieved\n",
-      "future: <Task finished name='Task-6' coro=<update() done, defined at /tmp/ipykernel_1149508/899354900.py:10> exception=AttributeError(\"'numpy.ndarray' object has no attribute 'detach'\")>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_1149508/899354900.py\", line 20, in update\n",
-      "    x1_gt = x[0].reshape((seq_len, 40, 4, 3)).detach().cpu().numpy()\n",
-      "AttributeError: 'numpy.ndarray' object has no attribute 'detach'\n"
+      "torch.Size([1261, 960])\n",
+      "1261 960\n",
+      "torch.Size([1261, 960])\n",
+      "1261 960\n",
+      "torch.Size([1061, 960])\n",
+      "1061 960\n"
      ]
     }
    ],
