more tests, need to streamline this

--- a/hsmm_ablation.ipynb
+++ b/hsmm_ablation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,20 +32,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Model | Z Dim | MSE |\n",
+      "|:-----:|:-----:|:----:|\n",
+      "| ablation_mild | 3 | 8.6231e-01 ± 1.4539e+00 |\n",
+      "| ablation_vae | 3 | 8.2247e-01 ± 1.1678e+00 |\n",
+      "| mild_crosskl | 3 | 8.3858e-01 ± 1.1861e+00 |\n",
+      "| mild_crosstrain | 3 | 8.8341e-01 ± 1.2589e+00 |\n",
+      "| mild_sophia_addcrosskl | 3 | 8.2453e-01 ± 1.3395e+00 |\n",
+      "| vae_crosskl | 3 | 8.4744e-01 ± 1.2765e+00 |\n",
+      "| vae_onlycrosskl | 3 | 8.5214e-01 ± 1.3635e+00 |\n",
+      "| vae_sophia_addcrosskl | 3 | 8.0910e-01 ± 1.3277e+00 |\n",
+      "| ablation_mild | 5 | 7.7956e-01 ± 1.1051e+00 |\n",
+      "| ablation_vae | 5 | 7.0160e-01 ± 9.5632e-01 |\n",
+      "| mild_crosskl | 5 | 8.1390e-01 ± 1.1829e+00 |\n",
+      "| mild_crosstrain | 5 | 8.5101e-01 ± 1.3006e+00 |\n",
+      "| mild_sophia_addcrosskl | 5 | 7.4034e-01 ± 1.0463e+00 |\n",
+      "| vae_crosskl | 5 | 8.8338e-01 ± 1.4756e+00 |\n",
+      "| vae_onlycrosskl | 5 | 6.8199e-01 ± 9.3102e-01 |\n",
+      "| vae_sophia_addcrosskl | 5 | 7.7560e-01 ± 1.1086e+00 |\n",
+      "| ablation_mild | 8 | 6.7205e-01 ± 9.4620e-01 |\n",
+      "| ablation_vae | 8 | 6.9237e-01 ± 9.6632e-01 |\n",
+      "| mild_crosskl | 8 | 8.5599e-01 ± 1.1722e+00 |\n",
+      "| mild_crosstrain | 8 | 8.2184e-01 ± 1.1152e+00 |\n",
+      "| mild_sophia_addcrosskl | 8 | 6.7330e-01 ± 1.0788e+00 |\n",
+      "| vae_crosskl | 8 | 9.2175e-01 ± 1.5100e+00 |\n",
+      "| vae_onlycrosskl | 8 | 6.7483e-01 ± 9.0983e-01 |\n",
+      "| vae_sophia_addcrosskl | 8 | 6.9736e-01 ± 1.1131e+00 |\n",
+      "| ablation_mild | 10 | 6.5656e-01 ± 9.6128e-01 |\n",
+      "| ablation_vae | 10 | 6.7829e-01 ± 9.3603e-01 |\n",
+      "| mild_crosskl | 10 | 8.6579e-01 ± 1.1438e+00 |\n",
+      "| mild_crosstrain | 10 | 8.5588e-01 ± 1.1379e+00 |\n",
+      "| mild_sophia_addcrosskl | 10 | 7.0218e-01 ± 1.1115e+00 |\n",
+      "| vae_crosskl | 10 | 7.5571e-01 ± 1.0300e+00 |\n",
+      "| vae_onlycrosskl | 10 | 6.4489e-01 ± 9.4786e-01 |\n",
+      "| vae_sophia_addcrosskl | 10 | 7.2541e-01 ± 1.2155e+00 |\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"| Model | Z Dim | MSE |\")\n",
     "print(\"|:-----:|:-----:|:----:|\")\n",
-    "for z_dim in [3,5]:#,8,10]:\n",
-    "\tfor model_types in ['ablation_vae','ablation_mild', 'cross_kld_mild', 'cross_kld_recon']:\n",
+    "for z_dim in [3,5,8,10]:\n",
+    "\tfor model_types in [\"ablation_mild\", \"ablation_vae\", \"mild_crosskl\", \"mild_crosstrain\", \"mild_sophia_addcrosskl\", \"vae_crosskl\", \"vae_onlycrosskl\", \"vae_sophia_addcrosskl\"]:\n",
     "# if True:\n",
     "# \tif True:\t\n",
     "\t\t# ckpt = 'logs/2023/cross_kld_correct/models/final.pth'\n",
     "\t\tmse_error = []\n",
     "\t\tfor trial in [0,1,2,4]:\n",
-    "\t\t\tckpt = f'logs/2023/{model_types}/z{z_dim}/trial{trial}/models/0040.pth' # input()\n",
+    "\t\t\tckpt = f'logs/2023/{model_types}/z{z_dim}/trial{trial}/models/final.pth' # input()\n",
     "\t\t\tdirname = os.path.dirname(ckpt)\n",
     "\t\t\thyperparams = np.load(os.path.join(dirname,'hyperparams.npz'), allow_pickle=True)\n",
     "\t\t\targs = hyperparams['args'].item()\n",
@@ -126,7 +167,8 @@
     "\t\t\t\tmse_i = ((x2_gen - x2_gt)**2).detach().cpu().numpy().sum(-1).sum(-1).sum(-1)\n",
     "\t\t\t\tmse_error += mse_i.tolist()\n",
     "\t\tprint(f\"| {model_types} | {z_dim} | {np.mean(mse_error):.4e} ± {np.std(mse_error):.4e} |\")\n",
-    "\t\t\t# print(f'MSE: {np.sum(mse_error)}')\n"
+    "\t\t\t# print(f'MSE: {np.sum(mse_error)}')\n",
+    "\tprint('')\n"
    ]
   }
  ],
