--- a/hsmm_ablation.ipynb
+++ b/hsmm_ablation.ipynb
@@ -19,6 +19,7 @@
     "from torch.utils.data import DataLoader\n",
     "import numpy as np\n",
     "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '2'\n",
     "import pbdlib as pbd\n",
     "\n",
     "import networks\n",
@@ -27,7 +28,7 @@
     "import dataloaders\n",
     "\n",
     "torch.autograd.set_detect_anomaly(True)\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
    ]
   },
   {
@@ -39,53 +40,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Model | Z Dim | MSE |\n",
-      "|:-----:|:-----:|:----:|\n",
-      "| ablation_mild | 3 | 8.6231e-01 ± 1.4539e+00 |\n",
-      "| ablation_vae | 3 | 8.2247e-01 ± 1.1678e+00 |\n",
-      "| mild_crosskl | 3 | 8.3858e-01 ± 1.1861e+00 |\n",
-      "| mild_crosstrain | 3 | 8.8341e-01 ± 1.2589e+00 |\n",
-      "| mild_sophia_addcrosskl | 3 | 8.2453e-01 ± 1.3395e+00 |\n",
-      "| vae_crosskl | 3 | 8.4744e-01 ± 1.2765e+00 |\n",
-      "| vae_onlycrosskl | 3 | 8.5214e-01 ± 1.3635e+00 |\n",
-      "| vae_sophia_addcrosskl | 3 | 8.0910e-01 ± 1.3277e+00 |\n",
-      "| ablation_mild | 5 | 7.7956e-01 ± 1.1051e+00 |\n",
-      "| ablation_vae | 5 | 7.0160e-01 ± 9.5632e-01 |\n",
-      "| mild_crosskl | 5 | 8.1390e-01 ± 1.1829e+00 |\n",
-      "| mild_crosstrain | 5 | 8.5101e-01 ± 1.3006e+00 |\n",
-      "| mild_sophia_addcrosskl | 5 | 7.4034e-01 ± 1.0463e+00 |\n",
-      "| vae_crosskl | 5 | 8.8338e-01 ± 1.4756e+00 |\n",
-      "| vae_onlycrosskl | 5 | 6.8199e-01 ± 9.3102e-01 |\n",
-      "| vae_sophia_addcrosskl | 5 | 7.7560e-01 ± 1.1086e+00 |\n",
-      "| ablation_mild | 8 | 6.7205e-01 ± 9.4620e-01 |\n",
-      "| ablation_vae | 8 | 6.9237e-01 ± 9.6632e-01 |\n",
-      "| mild_crosskl | 8 | 8.5599e-01 ± 1.1722e+00 |\n",
-      "| mild_crosstrain | 8 | 8.2184e-01 ± 1.1152e+00 |\n",
-      "| mild_sophia_addcrosskl | 8 | 6.7330e-01 ± 1.0788e+00 |\n",
-      "| vae_crosskl | 8 | 9.2175e-01 ± 1.5100e+00 |\n",
-      "| vae_onlycrosskl | 8 | 6.7483e-01 ± 9.0983e-01 |\n",
-      "| vae_sophia_addcrosskl | 8 | 6.9736e-01 ± 1.1131e+00 |\n",
-      "| ablation_mild | 10 | 6.5656e-01 ± 9.6128e-01 |\n",
-      "| ablation_vae | 10 | 6.7829e-01 ± 9.3603e-01 |\n",
-      "| mild_crosskl | 10 | 8.6579e-01 ± 1.1438e+00 |\n",
-      "| mild_crosstrain | 10 | 8.5588e-01 ± 1.1379e+00 |\n",
-      "| mild_sophia_addcrosskl | 10 | 7.0218e-01 ± 1.1115e+00 |\n",
-      "| vae_crosskl | 10 | 7.5571e-01 ± 1.0300e+00 |\n",
-      "| vae_onlycrosskl | 10 | 6.4489e-01 ± 9.4786e-01 |\n",
-      "| vae_sophia_addcrosskl | 10 | 7.2541e-01 ± 1.2155e+00 |\n"
+      "| Model | Z Dim | MSE | Recon |\n",
+      "|:-----:|:-----:|:----:|:----:|\n",
+      "| ablation_vae | 3 | 8.3238e-01 ± 1.2583e+00 | 2.5362e-01 ± 2.2689e-01 |\n",
+      "| vae_crosskl | 3 | 8.3685e-01 ± 1.2672e+00 | 3.0193e-01 ± 2.3822e-01 |\n",
+      "| vae_onlycrosskl | 3 | 8.4034e-01 ± 1.3129e+00 | 2.4277e-01 ± 2.2238e-01 |\n",
+      "| vae_sophia_onlycrosskl | 3 | 8.2272e-01 ± 1.3904e+00 | 1.8425e-01 ± 1.7161e-01 |\n",
+      "| vae_sophia_addcrosskl | 3 | 8.0949e-01 ± 1.3140e+00 | 1.8488e-01 ± 1.7268e-01 |\n",
+      "| ablation_mild | 3 | 8.6093e-01 ± 1.4293e+00 | 2.3062e-01 ± 2.1622e-01 |\n",
+      "| mild_crosskl | 3 | 8.3761e-01 ± 1.2148e+00 | 3.2086e-01 ± 2.7147e-01 |\n",
+      "| mild_sophia_onlycrosskl | 3 | 8.2231e-01 ± 1.3833e+00 | 1.8719e-01 ± 1.6789e-01 |\n",
+      "| mild_sophia_addcrosskl | 3 | 8.1908e-01 ± 1.3026e+00 | 1.8969e-01 ± 1.7835e-01 |\n",
+      "| mild_sophia_ablation | 3 | 8.7155e-01 ± 1.6359e+00 | 1.8328e-01 ± 1.7921e-01 |\n",
+      "\n",
+      "| ablation_vae | 5 | 7.0876e-01 ± 9.9508e-01 | 1.0172e-01 ± 7.6736e-02 |\n",
+      "| vae_crosskl | 5 | 8.8036e-01 ± 1.4217e+00 | 3.3015e-01 ± 2.4543e-01 |\n"
      ]
     }
    ],
    "source": [
-    "print(\"| Model | Z Dim | MSE |\")\n",
-    "print(\"|:-----:|:-----:|:----:|\")\n",
+    "print(\"| Model | Z Dim | MSE | Recon |\")\n",
+    "print(\"|:-----:|:-----:|:----:|:----:|\")\n",
     "for z_dim in [3,5,8,10]:\n",
-    "\tfor model_types in [\"ablation_mild\", \"ablation_vae\", \"mild_crosskl\", \"mild_crosstrain\", \"mild_sophia_addcrosskl\", \"vae_crosskl\", \"vae_onlycrosskl\", \"vae_sophia_addcrosskl\"]:\n",
+    "\tfor model_types in [\n",
+    "\t\t\t\t\t\t\"ablation_vae\", \n",
+    "\t\t\t\t\t\t\"vae_crosskl\", \n",
+    "\t\t\t\t\t\t\"vae_onlycrosskl\", \n",
+    "\t\t\t\t\t\t\"vae_sophia_onlycrosskl\", \n",
+    "\t\t\t\t\t\t\"vae_sophia_addcrosskl\",\n",
+    "\t\t\t\t\t\t\"ablation_mild\", \n",
+    "\t\t\t\t\t\t\"mild_crosskl\", \n",
+    "\t\t\t\t\t\t# \"mild_onlycrosskl\", # Not done with AdamW\n",
+    "\t\t\t\t\t\t\"mild_sophia_onlycrosskl\", \n",
+    "\t\t\t\t\t\t\"mild_sophia_addcrosskl\",\n",
+    "\t\t\t\t\t\t\"mild_sophia_ablation\",\n",
+    "\t\t\t\t\t\t# \"vae_ablation\",\n",
+    "\t\t\t\t\t\t# \"vae_addcrosskl\",\n",
+    "\t\t\t\t\t\t# \"vae_onlycrosskl\",\n",
+    "\t\t\t\t\t\t# \"mild_ablation\",\n",
+    "\t\t\t\t\t\t# \"mild_addcrosskl\",\n",
+    "\t\t\t\t\t\t# \"mild_onlycrosskl\",\n",
+    "\t\t\t\t\t]:\n",
     "# if True:\n",
     "# \tif True:\t\n",
     "\t\t# ckpt = 'logs/2023/cross_kld_correct/models/final.pth'\n",
     "\t\tmse_error = []\n",
-    "\t\tfor trial in [0,1,2,4]:\n",
+    "\t\trecon_error = []\n",
+    "\t\tfor trial in range(5):\n",
     "\t\t\tckpt = f'logs/2023/{model_types}/z{z_dim}/trial{trial}/models/final.pth' # input()\n",
     "\t\t\tdirname = os.path.dirname(ckpt)\n",
     "\t\t\thyperparams = np.load(os.path.join(dirname,'hyperparams.npz'), allow_pickle=True)\n",
@@ -100,13 +101,13 @@
     "\t\t\t\tnb_dim = 4*model.latent_dim\n",
     "\t\t\telse:\n",
     "\t\t\t\tnb_dim = 2*model.latent_dim\n",
-    "\t\t\tdataset = getattr(dataloaders, args.dataset)\n",
+    "\t\t\t# dataset = getattr(dataloaders, args.dataset)\n",
     "\t\t\tif model.window_size ==1:\n",
-    "\t\t\t\ttrain_iterator = DataLoader(dataset.SequenceDataset(args.src, train=True), batch_size=1, shuffle=True)\n",
-    "\t\t\t\ttest_iterator = DataLoader(dataset.SequenceDataset(args.src, train=False), batch_size=1, shuffle=True)\n",
+    "\t\t\t\ttrain_iterator = DataLoader(dataloaders.buetepage.SequenceDataset(args.src, train=True), batch_size=1, shuffle=True)\n",
+    "\t\t\t\ttest_iterator = DataLoader(dataloaders.buetepage.SequenceDataset(args.src, train=False), batch_size=1, shuffle=True)\n",
     "\t\t\telse:\n",
-    "\t\t\t\ttrain_iterator = DataLoader(dataset.SequenceWindowDataset(args.src, train=True, window_length=model.window_size), batch_size=1, shuffle=True)\n",
-    "\t\t\t\ttest_iterator = DataLoader(dataset.SequenceWindowDataset(args.src, train=False, window_length=model.window_size), batch_size=1, shuffle=True)\n",
+    "\t\t\t\ttrain_iterator = DataLoader(dataloaders.buetepage.SequenceWindowDataset(args.src, train=True, window_length=model.window_size), batch_size=1, shuffle=True)\n",
+    "\t\t\t\ttest_iterator = DataLoader(dataloaders.buetepage.SequenceWindowDataset(args.src, train=False, window_length=model.window_size), batch_size=1, shuffle=True)\n",
     "\t\t\thsmm = ckpt['hsmm']\n",
     "\t\t\t# z_dim = model.latent_dim\n",
     "\t\t\t\n",
@@ -150,23 +151,27 @@
     "\n",
     "\t\t\t\tseq_alpha = alpha_hsmm.argmax(0)\n",
     "\n",
-    "\t\t\t\tx_gen, zpost_samples, zpost_dist = model(x)\n",
+    "\t\t\t\tx_recon, zpost_samples, zpost_dist = model(x)\n",
     "\t\t\t\t\t\n",
     "\t\t\t\tif model.window_size >1:\n",
     "\t\t\t\t\tz2, sigma2 = hsmm[label].condition(zpost_dist.mean[0].detach().cpu().numpy(), zpost_dist.covariance_matrix[0].detach().cpu().numpy(), dim_in=slice(0, z_dim), dim_out=slice(z_dim, 2*z_dim))\n",
+    "\t\t\t\t\t# z2 = hsmm[label].condition(zpost_dist.mean[0].detach().cpu().numpy(), dim_in=slice(0, z_dim), dim_out=slice(z_dim, 2*z_dim))\n",
     "\t\t\t\telse:\n",
     "\t\t\t\t\tz1_vel = torch.diff(zpost_dist.mean[0], prepend=zpost_dist.mean[0][0:1], dim=0)\n",
     "\t\t\t\t\tz2, sigma2 = hsmm[label].condition(torch.concat([zpost_dist.mean[0], z1_vel], dim=-1).detach().cpu().numpy(), zpost_dist.covariance_matrix[0].detach().cpu().numpy(), dim_in=slice(0, 2*z_dim), dim_out=slice(2*z_dim, 3*z_dim))\n",
     "\t\t\t\tx2_gen = model._output(model._decoder(torch.Tensor(z2).to(device)))\n",
-    "\t\t\t\tx1_gen = x_gen[0]\n",
-    "\t\t\t\tx_gen = torch.concat([x1_gen[None], x2_gen[None]])\n",
-    "\t\t\t\tx2_gen = x2_gen.reshape((x2_gen.shape[0], 40, 4 ,3))\n",
-    "\t\t\t\tx2_gt = x[1].reshape((x[1].shape[0], 40, 4 ,3))\n",
+    "\t\t\t\t# x1_gen = x_gen[0]\n",
+    "\t\t\t\t# x_gen = torch.concat([x1_gen[None], x2_gen[None]])\n",
+    "\t\t\t\tx2_recon = x_recon[1].reshape((x[1].shape[0], model.window_size, model.num_joints ,3))\n",
+    "\t\t\t\tx2_gen = x2_gen.reshape((x2_gen.shape[0], model.window_size, model.num_joints ,3))\n",
+    "\t\t\t\tx2_gt = x[1].reshape((x[1].shape[0], model.window_size, model.num_joints ,3))\n",
     "\t\t\t\t\n",
     "\t\t\t\t# mse_error[label].append(F.mse_loss(x[1], x2_gen, reduction='sum').detach().cpu().numpy())\n",
     "\t\t\t\tmse_i = ((x2_gen - x2_gt)**2).detach().cpu().numpy().sum(-1).sum(-1).sum(-1)\n",
+    "\t\t\t\trecon_i = ((x2_recon - x2_gt)**2).detach().cpu().numpy().sum(-1).sum(-1).sum(-1)\n",
     "\t\t\t\tmse_error += mse_i.tolist()\n",
-    "\t\tprint(f\"| {model_types} | {z_dim} | {np.mean(mse_error):.4e} ± {np.std(mse_error):.4e} |\")\n",
+    "\t\t\t\trecon_error += recon_i.tolist()\n",
+    "\t\tprint(f\"| {model_types} | {z_dim} | {np.mean(mse_error):.4e} ± {np.std(mse_error):.4e} | {np.mean(recon_error):.4e} ± {np.std(recon_error):.4e} |\")\n",
     "\t\t\t# print(f'MSE: {np.sum(mse_error)}')\n",
     "\tprint('')\n"
    ]
