--- a/hsmm_ablation.ipynb
+++ b/hsmm_ablation.ipynb
@@ -54,7 +54,38 @@
       "| mild_sophia_ablation | 3 | 8.7155e-01 ± 1.6359e+00 | 1.8328e-01 ± 1.7921e-01 |\n",
       "\n",
       "| ablation_vae | 5 | 7.0876e-01 ± 9.9508e-01 | 1.0172e-01 ± 7.6736e-02 |\n",
-      "| vae_crosskl | 5 | 8.8036e-01 ± 1.4217e+00 | 3.3015e-01 ± 2.4543e-01 |\n"
+      "| vae_crosskl | 5 | 8.8036e-01 ± 1.4217e+00 | 3.3015e-01 ± 2.4543e-01 |\n",
+      "| vae_onlycrosskl | 5 | 6.8970e-01 ± 9.4087e-01 | 8.5432e-02 ± 7.1670e-02 |\n",
+      "| vae_sophia_onlycrosskl | 5 | 7.6130e-01 ± 1.1069e+00 | 7.2763e-02 ± 5.7594e-02 |\n",
+      "| vae_sophia_addcrosskl | 5 | 7.7347e-01 ± 1.1211e+00 | 7.9058e-02 ± 6.2204e-02 |\n",
+      "| ablation_mild | 5 | 7.6629e-01 ± 1.0660e+00 | 9.3502e-02 ± 7.5366e-02 |\n",
+      "| mild_crosskl | 5 | 8.2818e-01 ± 1.2739e+00 | 3.0760e-01 ± 2.4535e-01 |\n",
+      "| mild_sophia_onlycrosskl | 5 | 7.2780e-01 ± 1.0366e+00 | 7.4304e-02 ± 5.7781e-02 |\n",
+      "| mild_sophia_addcrosskl | 5 | 7.3063e-01 ± 1.0317e+00 | 6.9145e-02 ± 5.6903e-02 |\n",
+      "| mild_sophia_ablation | 5 | 7.5048e-01 ± 1.0796e+00 | 7.4564e-02 ± 5.8476e-02 |\n",
+      "\n",
+      "| ablation_vae | 8 | 6.9484e-01 ± 9.6848e-01 | 3.7862e-02 ± 3.1341e-02 |\n",
+      "| vae_crosskl | 8 | 8.8375e-01 ± 1.4125e+00 | 3.5787e-01 ± 2.5397e-01 |\n",
+      "| vae_onlycrosskl | 8 | 6.7312e-01 ± 9.1082e-01 | 4.5782e-02 ± 3.3791e-02 |\n",
+      "| vae_sophia_onlycrosskl | 8 | 7.1415e-01 ± 1.1189e+00 | 3.4736e-02 ± 2.2012e-02 |\n",
+      "| vae_sophia_addcrosskl | 8 | 6.9836e-01 ± 1.1246e+00 | 3.6916e-02 ± 2.0820e-02 |\n",
+      "| ablation_mild | 8 | 6.7108e-01 ± 9.6133e-01 | 3.2600e-02 ± 2.7168e-02 |\n",
+      "| mild_crosskl | 8 | 8.7088e-01 ± 1.2077e+00 | 4.0227e-01 ± 2.8925e-01 |\n",
+      "| mild_sophia_onlycrosskl | 8 | 6.8773e-01 ± 1.0645e+00 | 3.6437e-02 ± 2.1525e-02 |\n",
+      "| mild_sophia_addcrosskl | 8 | 6.7076e-01 ± 1.0725e+00 | 3.3392e-02 ± 1.9890e-02 |\n",
+      "| mild_sophia_ablation | 8 | 7.2901e-01 ± 1.1399e+00 | 3.2142e-02 ± 2.1002e-02 |\n",
+      "\n",
+      "| ablation_vae | 10 | 6.8391e-01 ± 9.4185e-01 | 2.7081e-02 ± 1.9836e-02 |\n",
+      "| vae_crosskl | 10 | 7.6653e-01 ± 1.0788e+00 | 3.2315e-01 ± 2.4603e-01 |\n",
+      "| vae_onlycrosskl | 10 | 6.5030e-01 ± 9.3792e-01 | 2.7168e-02 ± 1.7195e-02 |\n",
+      "| vae_sophia_onlycrosskl | 10 | 7.2432e-01 ± 1.1596e+00 | 3.1299e-02 ± 1.8831e-02 |\n",
+      "| vae_sophia_addcrosskl | 10 | 7.2149e-01 ± 1.2061e+00 | 3.0533e-02 ± 2.0243e-02 |\n",
+      "| ablation_mild | 10 | 6.5695e-01 ± 9.6006e-01 | 2.3823e-02 ± 1.6922e-02 |\n",
+      "| mild_crosskl | 10 | 8.5855e-01 ± 1.1252e+00 | 4.3416e-01 ± 3.1015e-01 |\n",
+      "| mild_sophia_onlycrosskl | 10 | 6.6621e-01 ± 1.0662e+00 | 3.1546e-02 ± 1.9416e-02 |\n",
+      "| mild_sophia_addcrosskl | 10 | 7.0181e-01 ± 1.1109e+00 | 3.5047e-02 ± 2.0502e-02 |\n",
+      "| mild_sophia_ablation | 10 | 6.7520e-01 ± 1.1034e+00 | 3.1964e-02 ± 1.9105e-02 |\n",
+      "\n"
      ]
     }
    ],
