minor testing changes

--- a/mse_plotter.ipynb
+++ b/mse_plotter.ipynb
@@ -71,9 +71,9 @@
     "\n",
     "fig = plt.figure()\n",
     "plt.title('MSE of predicted robot joints after observing human')\n",
-    "ax_box_pred = plt.subplot(1,2,1)\n",
+    "ax_box_pred = plt.subplot(2,1,1)\n",
     "# ax_box_vae = plt.subplot(2,2,2)\n",
-    "ax_bar_pred = plt.subplot(1,2,2)\n",
+    "ax_bar_pred = plt.subplot(2,1,2)\n",
     "# ax_bar_vae = plt.subplot(2,2,4)\n",
     "k = 0\n",
     "\n",
@@ -81,12 +81,12 @@
     "# vae_mse = []\n",
     "\n",
     "for model_type, use_cov in [\n",
-    "                        ('vae_vanilla', False),#, 'final.pth'),\n",
+    "                        # ('vae_vanilla', False),#, 'final.pth'),\n",
     "                        # ('vae_vanilla_hsmm', False),#, 'final.pth'),\n",
-    "                        ('vae_crossrecon_samplenocovcond', False),#, 'final.pth'),\n",
-    "                        ('vae_crossrecon_samplecovcond', True),#, 'final.pth'),\n",
-    "                        ('vae_crossrecon_nocovcondsampling', False),#, 'final.pth'),\n",
-    "                        ('vae_crossrecon_covcondsampling', True),#, 'final.pth'),\n",
+    "                        # ('vae_crossrecon_samplenocovcond', False),#, 'final.pth'),\n",
+    "                        # ('vae_crossrecon_samplecovcond', True),#, 'final.pth'),\n",
+    "                        # ('vae_crossrecon_nocovcondsampling', False),#, 'final.pth'),\n",
+    "                        # ('vae_crossrecon_covcondsampling', True),#, 'final.pth'),\n",
     "                        # ('vae_crossrecon_nocovcond', False),#, 'final.pth'),\n",
     "                        # ('vae_crossrecon_covcond', True),#, 'final.pth'),\n",
     "                        # ('mild_vanilla', False),#, 'final.pth'),\n",
