made a library version to import with mild_hri_ros

--- a/mild_hri/eval_notebooks/latent_plotter.ipynb
+++ b/mild_hri/eval_notebooks/latent_plotter.ipynb
@@ -70,9 +70,9 @@
     "os.environ['CUDA_VISIBLE_DEVICES'] = '0'\n",
     "os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "\n",
-    "from vae import *\n",
+    "from mild_hri.vae import *\n",
+    "import mild_hri.utils\n",
     "import dataloaders\n",
-    "import utils\n",
     "\n",
     "import pbdlib as pbd\n",
     "import pbdlib_torch as pbd_torch\n",
