fixing plotting, not yet done

--- a/mild_hri/eval_notebooks/mse_plotter.ipynb
+++ b/mild_hri/eval_notebooks/mse_plotter.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Testing Predictions Pepper Buetepage"
+    "# Testing Predictions of the variants of MILD"
    ]
   },
   {
@@ -69,7 +69,7 @@
     "\n",
     "pred_mse = []\n",
     "for model_type, use_cov in [\n",
-    "                        ('v1_0', False),\n",
+    "                        ('v1_0', False), # \n",
     "                        ('v3_1', False),\n",
     "                        ('v3_2', True),\n",
     "                        ('v4_1', False),\n",
