--- a/eval_notebooks/latent_plotter.ipynb
+++ b/eval_notebooks/latent_plotter.ipynb
@@ -73,10 +73,8 @@
     "\tfor i in range(ssm.nb_states):\n",
     "\t\tpbd_torch.plot_gauss3d(ax_dists[a], ssm.mu[i, :3].detach().cpu().numpy(), ssm.sigma[i, :3, :3].detach().cpu().numpy(),\n",
     "\t\t\t\t\tcolor='red', alpha=0.4)\n",
-    "\t\t# pbd_torch.plot_gauss3d(ax_dists[a], ssm.mu[i, z_dim:z_dim+3].detach().cpu().numpy(), ssm.sigma[i, z_dim:z_dim+3, z_dim:z_dim+3].detach().cpu().numpy(),\n",
-    "\t\t# \t\t\tcolor='blue', alpha=0.4)\n",
-    "\t\t\n",
-    "\t# break\n"
+    "\t\tpbd_torch.plot_gauss3d(ax_dists[a], ssm.mu[i, z_dim:z_dim+3].detach().cpu().numpy(), ssm.sigma[i, z_dim:z_dim+3, z_dim:z_dim+3].detach().cpu().numpy(),\n",
+    "\t\t\t\t\tcolor='blue', alpha=0.4)\n"
    ]
   }
  ],
