--- a/eval_notebooks/mse_plotter.ipynb
+++ b/eval_notebooks/mse_plotter.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fca1d50b370>"
+       "<matplotlib.legend.Legend at 0x7fd6d4f632e0>"
       ]
      },
      "execution_count": 1,
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbc05182893d492b83ea97b161bb48bd",
+       "model_id": "ffc2d052a0b44bdab7d6dd989afd0799",
        "version_major": 2,
        "version_minor": 0
       },
